src/core-crm/objects/Contact/fields/Accessibility_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Requirement__c</fullName>
    <label>Accessibility Requirement</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>