src/core-crm/objects/Contact/fields/Agency_Country__c.field-meta.xml
<CustomField>
    <fullName>Agency_Country__c</fullName>
    <description>The country that the agency resides in.</description>
    <label>Agency Country</label>
    <length>150</length>
    <type>Text</type>
</CustomField>