src/core-crm/objects/Contact/fields/Agency_Email__c.field-meta.xml
<CustomField>
    <fullName>Agency_Email__c</fullName>
    <description>The agency email address.</description>
    <label>Agency Email</label>
    <type>Email</type>
</CustomField>