src/core-crm/objects/Contact/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <description>The Name of the Agency.</description>
    <label>Agency Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>