src/core-crm/objects/Contact/fields/Alumni_Verified__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to determine contact is verified as alumni (system automated or manually verified by program administrator)</description>
    <label>Alumni Verified</label>
    <type>Checkbox</type>
</CustomField>