src/core-crm/objects/Contact/fields/Applicant_Onshore__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Onshore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicant Onshore</label>
    <type>Checkbox</type>
</CustomField>