src/core-crm/objects/Contact/fields/At_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Rating__c</fullName>
    <description>The student’s at risk rating as determined by staff</description>
    <label>At Risk Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>