src/core-crm/objects/Contact/fields/ATSI_Code__c.field-meta.xml
<CustomField>
    <fullName>ATSI_Code__c</fullName>
    <label>Indigenous Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ATSI_Code</valueSetName>
    </valueSet>
</CustomField>