src/core-crm/objects/Contact/fields/Australian_South_Sea_Islander__c.field-meta.xml
<CustomField>
    <fullName>Australian_South_Sea_Islander__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the contact specified that they identify themselves as one of Australian South Sea Islander People.</description>
    <label>Australian South Sea Islander</label>
    <type>Checkbox</type>
</CustomField>