src/core-crm/objects/Contact/fields/Birth_Country__c.field-meta.xml
<CustomField>
    <fullName>Birth_Country__c</fullName>
    <description>The Country the Contact was born in.</description>
    <label>Birth Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>