src/core-crm/objects/Contact/fields/Cadence_Application__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cadence Application</label>
    <referenceTo>hed__Application__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>