src/core-crm/objects/Contact/fields/Calculated_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Cadence__c</fullName>
    <externalId>true</externalId>
    <label>Calculated Cadence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>