src/core-crm/objects/Contact/fields/Can_Nurture__c.field-meta.xml
<CustomField>
    <fullName>Can_Nurture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Nurture</label>
    <type>Checkbox</type>
</CustomField>