src/core-crm/objects/Contact/fields/Contact_Image__c.field-meta.xml
<CustomField>
    <fullName>Contact_Image__c</fullName>
    <label>Contact Image</label>
    <length>75768</length>
    <type>Html</type>
</CustomField>