src/core-crm/objects/Contact/fields/ContactOtherAddress_Validation__c.field-meta.xml
<CustomField>
    <fullName>ContactOtherAddress_Validation__c</fullName>
    <label>ContactOtherAddress Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loqate_Validation</valueSetName>
    </valueSet>
</CustomField>