src/core-crm/objects/Contact/fields/ContactPersonalMobile_Validation__c.field-meta.xml
<CustomField>
    <fullName>ContactPersonalMobile_Validation__c</fullName>
    <label>ContactPersonalMobile Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loqate_Validation</valueSetName>
    </valueSet>
</CustomField>