src/core-crm/objects/Contact/fields/ContactPhone_Locale__c.field-meta.xml
<CustomField>
    <fullName>ContactPhone_Locale__c</fullName>
    <label>ContactPhone Locale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loqate_Locale</valueSetName>
    </valueSet>
</CustomField>