src/core-crm/objects/Contact/fields/Country_of_Residency__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Residency__c</fullName>
    <label>Country of Residency</label>
    <length>80</length>
    <type>Text</type>
</CustomField>