src/core-crm/objects/Contact/fields/Current_Learner_Verified__c.field-meta.xml
<CustomField>
    <fullName>Current_Learner_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to determine contact is verified as Current Learner (system automated or manually verified by program administrator)</description>
    <label>Current Learner Verified</label>
    <type>Checkbox</type>
</CustomField>