src/core-crm/objects/Contact/fields/Dietary_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Requirement__c</fullName>
    <description>Capture details for learner’s dietary requirements</description>
    <label>Dietary Requirement</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>