src/core-crm/objects/Contact/fields/Do_Not_Sync_To_MC_Override__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Sync_To_MC_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this is true, this will mark Sync to MC as false and this will not be synced to Marketing Cloud</description>
    <label>Do Not Sync To MC (Override)</label>
    <type>Checkbox</type>
</CustomField>