src/core-crm/objects/Contact/fields/Dont_Market__c.field-meta.xml
<CustomField>
    <fullName>Dont_Market__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controlled from the individual object</description>
    <label>Don&apos;t Market</label>
    <type>Checkbox</type>
</CustomField>