src/core-crm/objects/Contact/fields/Education_Disruption_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Education_Disruption_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recent Application by contact has flagged Education Disruption applicant.</description>
    <label>Education Disruption Applicant</label>
    <type>Checkbox</type>
</CustomField>