src/core-crm/objects/Contact/fields/Elite_Athlete_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Elite_Athlete_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recent Application by contact has flagged Elite Athlete Applicant.</description>
    <label>Elite Athlete Applicant</label>
    <type>Checkbox</type>
</CustomField>