src/core-crm/objects/Contact/fields/Email_Unsub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Email_Unsub_Reason__c</fullName>
    <label>Email Unsub Reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>