src/core-crm/objects/Contact/fields/Financial_Hardship_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Financial_Hardship_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recent Application by contact has flagged Financial Hardship applicant.</description>
    <label>Financial Hardship Applicant</label>
    <type>Checkbox</type>
</CustomField>