src/core-crm/objects/Contact/fields/First_in_Family__c.field-meta.xml
<CustomField>
    <fullName>First_in_Family__c</fullName>
    <description>This is initially set by data provided in the Application record</description>
    <label>First in Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>