src/core-crm/objects/Contact/fields/First_in_Family_Applicant__c.field-meta.xml
<CustomField>
    <fullName>First_in_Family_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recent Application by contact has flagged First in Family applicant.</description>
    <label>First in Family Applicant</label>
    <type>Checkbox</type>
</CustomField>