src/core-crm/objects/Contact/fields/First_Peoples__c.field-meta.xml
<CustomField>
    <fullName>First_Peoples__c</fullName>
    <description>The People the applicant has identified themselves as on their QTQAC application.</description>
    <label>First Peoples</label>
    <length>255</length>
    <type>Text</type>
</CustomField>