src/core-crm/objects/Contact/fields/hed__Citizenship_Status__c.field-meta.xml
<CustomField>
    <fullName>hed__Citizenship_Status__c</fullName>
    <description>The Contact&apos;s citizenship status.</description>
    <inlineHelpText>The Contact&apos;s citizenship status.</inlineHelpText>
    <label>Citizenship Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Domestic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>