src/core-crm/objects/Contact/fields/hed__Exclude_from_Household_Formal_Greeting__c.field-meta.xml
<CustomField>
    <fullName>hed__Exclude_from_Household_Formal_Greeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field currently isn&apos;t tied to product functionality.</description>
    <inlineHelpText>This field currently isn&apos;t tied to product functionality.</inlineHelpText>
    <label>Exclude from Household Formal Greeting</label>
    <type>Checkbox</type>
</CustomField>