src/core-crm/objects/Contact/fields/hed__Former_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>hed__Former_Last_Name__c</fullName>
    <description>The Contact&apos;s former last name.</description>
    <inlineHelpText>The Contact&apos;s former last name.</inlineHelpText>
    <label>Former Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>