src/core-crm/objects/Contact/fields/IER_Score__c.field-meta.xml
<CustomField>
    <fullName>IER_Score__c</fullName>
    <label>IER Score</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>