src/core-crm/objects/Contact/fields/Is_Agent_Assisted__c.field-meta.xml
<CustomField>
    <fullName>Is_Agent_Assisted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the applicant has been assisted by an agency in their application.</description>
    <label>Is Agent Assisted</label>
    <type>Checkbox</type>
</CustomField>