src/core-crm/objects/Contact/fields/Is_CCE_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_CCE_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CCE Enabled</label>
    <type>Checkbox</type>
</CustomField>