src/core-crm/objects/Contact/fields/Is_International_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_International_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the contact submitted an International Application recently?</description>
    <label>Is International Applicant</label>
    <type>Checkbox</type>
</CustomField>