src/core-crm/objects/Contact/fields/Is_Maori_and_Pasifika__c.field-meta.xml
<CustomField>
    <fullName>Is_Maori_and_Pasifika__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the contact specified that they identify themselves as one of Māori or Pasifika people</description>
    <label>Maori and Pasifika</label>
    <type>Checkbox</type>
</CustomField>