src/core-crm/objects/Contact/fields/IsStaff_Active__c.field-meta.xml
<CustomField>
    <fullName>IsStaff_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to notify user if contact is active QUT staff</description>
    <label>IsStaff Active</label>
    <type>Checkbox</type>
</CustomField>