src/core-crm/objects/Contact/fields/Lead_Categorisation__c.field-meta.xml
<CustomField>
    <fullName>Lead_Categorisation__c</fullName>
    <formula>IF(  
    Lead_Score__c &gt;= 801, &apos;Applicant&apos;, 
    IF(Lead_Score__c &gt; 70, &apos;Hot&apos;, 
        IF(Lead_Score__c &gt; 50, &apos;Warm&apos;, 
            IF(Lead_Score__c &gt; 20, &apos;Cold&apos;, 
                &apos;Do not communicate&apos;
            ) 
        ) 
    ) 
)</formula>
    <label>Lead Categorisation</label>
    <type>Text</type>
</CustomField>