src/core-crm/objects/Contact/fields/Lead_Score_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The breakdown of lead scoring by category aggregates.</description>
    <label>Lead Score Detail</label>
    <referenceTo>Lead_Score_Detail__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>