src/core-crm/objects/Contact/fields/Learner_Email_Opt_In_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Learner_Email_Opt_In_DateTime__c</fullName>
    <description>The date and time that the email was opted in</description>
    <label>Learner Email Opt In DateTime</label>
    <type>DateTime</type>
</CustomField>