src/core-crm/objects/Contact/fields/Learner_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Learner_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing should not email this email address</description>
    <label>Learner Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>