src/core-crm/objects/Contact/fields/Low_Socio_Economic_Status__c.field-meta.xml
<CustomField>
    <fullName>Low_Socio_Economic_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The student’s low socio-economic status as determined by SA1 measure based on first known address</description>
    <label>Low Socio-Economic Status</label>
    <type>Checkbox</type>
</CustomField>