src/core-crm/objects/Contact/fields/Marketing_Course_Application_Score__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Course_Application_Score__c</fullName>
    <label>Marketing Course Application Score</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>