src/core-crm/objects/Contact/fields/Marketing_Mobile_Locale__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Mobile_Locale__c</fullName>
    <label>Marketing Mobile Locale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Locale</valueSetName>
    </valueSet>
</CustomField>