src/core-crm/objects/Contact/fields/Marketing_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Segmentation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Preferences</label>
    <referenceTo>Marketing_Segmentation__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>