src/core-crm/objects/Contact/fields/Marketing_Segmentation_Score__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Segmentation_Score__c</fullName>
    <label>Marketing Segmentation Score</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>