src/core-crm/objects/Contact/fields/Matching_Firstname__c.field-meta.xml
<CustomField>
    <fullName>Matching_Firstname__c</fullName>
    <description>Prepared firstname for matching.</description>
    <externalId>true</externalId>
    <label>Matching First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>