src/core-crm/objects/Contact/fields/Matching_Lastname__c.field-meta.xml
<CustomField>
    <fullName>Matching_Lastname__c</fullName>
    <description>Prepared lastname for matching.</description>
    <externalId>true</externalId>
    <label>Matching Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>