src/core-crm/objects/Contact/fields/Mobile_No_Locale__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No_Locale__c</fullName>
    <description>Captures the Mobile with no Locale</description>
    <externalId>true</externalId>
    <label>Mobile (No Locale)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>