src/core-crm/objects/Contact/fields/Moving_to_Brisbane__c.field-meta.xml
<CustomField>
    <fullName>Moving_to_Brisbane__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the marketing person intends on moving to Brisbane to study.</description>
    <label>Moving to Brisbane</label>
    <type>Checkbox</type>
</CustomField>