src/core-crm/objects/Contact/fields/Name_and_Email__c.field-meta.xml
<CustomField>
    <fullName>Name_and_Email__c</fullName>
    <formula>FirstName  &amp;   LastName &amp;  Email</formula>
    <label>Name and Email</label>
    <type>Text</type>
</CustomField>