src/core-crm/objects/Contact/fields/Nominated_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Employee_ID__c</fullName>
    <description>The Staff ID specified by learner on registration</description>
    <externalId>true</externalId>
    <label>Nominated Employee ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>