src/core-crm/objects/Contact/fields/Nominated_Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Student_ID__c</fullName>
    <description>The Student ID specified by learner on registration</description>
    <externalId>true</externalId>
    <label>Nominated Student ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>