src/core-crm/objects/Contact/fields/Parent_Person_Contact__c.field-meta.xml
<CustomField>
    <fullName>Parent_Person_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used on Child Contacts to identify the Parent Person Contact</description>
    <label>Parent Person Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>