src/core-crm/objects/Contact/fields/Parent_Person_Lead__c.field-meta.xml
<CustomField>
    <fullName>Parent_Person_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used on Child Contacts to identify the Parent Person Lead</description>
    <label>Parent Person Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>