src/core-crm/objects/Contact/fields/Partner_Sourced__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sourced__c</fullName>
    <description>This Checkbox needs to be set to true based on the Lead Conversion if the Lead converted into the contacts has a Lead source of Partner Sourced</description>
    <formula>IF( ISPICKVAL( Lead_Source_Category__c , &apos;Partner Sourced&apos; ) , TRUE , FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Sourced</label>
    <type>Checkbox</type>
</CustomField>